--- a/ReferenceApplication/ReferenceAppLayer/src/Makefile.am
+++ b/ReferenceApplication/ReferenceAppLayer/src/Makefile.am
@@ -4,6 +4,8 @@ lib_LTLIBRARIES=libOgreReferenceAppLayer.la
 
 libOgreReferenceAppLayer_la_SOURCES = OgreRefAppApplicationObject.cpp \
 			OgreRefAppOgreHead.cpp \
+			OgreRefAppJoint.cpp \
+			OgreRefAppJointSubtypes.h \
 			OgreRefAppPlane.cpp \
 			OgreRefAppWorld.cpp
 
