--- a/trunk/ReferenceApplication/ReferenceAppLayer/include/Makefile.am
+++ b/trunk/ReferenceApplication/ReferenceAppLayer/include/Makefile.am
@@ -1,5 +1,7 @@
 noinst_HEADERS = OgreRefAppApplicationObject.h \
 	OgreRefAppOgreHead.h \
+	OgreRefAppJoint.h \
+	OgreRefAppJointSubtypes.h \
 	OgreRefAppPrerequisites.h \
     OgreRefAppWorld.h \
 	OgreRefAppPlane.h \
