Added Box type, introduced fixed simulation step size, corrected an error with the ogre->ode matrix conversion which was screwing up mass rotation

--- a/ReferenceApplication/ReferenceAppLayer/scripts/ReferenceAppLayer.vcproj
+++ b/ReferenceApplication/ReferenceAppLayer/scripts/ReferenceAppLayer.vcproj
@@ -136,6 +136,9 @@
 				RelativePath="..\src\OgreRefAppBall.cpp">
 			</File>
 			<File
+				RelativePath="..\src\OgreRefAppBox.cpp">
+			</File>
+			<File
 				RelativePath="..\src\OgreRefAppJoint.cpp">
 			</File>
 			<File
@@ -159,6 +162,9 @@
 			</File>
 			<File
 				RelativePath="..\include\OgreRefAppBall.h">
+			</File>
+			<File
+				RelativePath="..\include\OgreRefAppBox.h">
 			</File>
 			<File
 				RelativePath="..\include\OgreRefAppJoint.h">
