--- a/trunk/ReferenceApplication/ReferenceAppLayer/include/Makefile.am
+++ b/trunk/ReferenceApplication/ReferenceAppLayer/include/Makefile.am
@@ -1,4 +1,5 @@
 noinst_HEADERS = OgreRefAppApplicationObject.h \
+	OgreRefAppBox.h \
 	OgreRefAppOgreHead.h \
 	OgreRefAppJoint.h \
 	OgreRefAppJointSubtypes.h \
