Patch from bytelord to allow manual animation of bones. Patch from Proton to add ScaleAffector and ColourAffector2 for particles. WIP collision detection / response with Q3 level

--- a/PlugIns/ParticleFX/include/Makefile.am
+++ b/PlugIns/ParticleFX/include/Makefile.am
@@ -2,7 +2,9 @@ noinst_HEADERS =OgreAreaEmitter.h \
                 OgreBoxEmitter.h \
                 OgreBoxEmitterFactory.h \
                 OgreColourFaderAffector.h \
+                OgreColourFaderAffector2.h \
                 OgreColourFaderAffectorFactory.h \
+                OgreColourFaderAffectorFactory2.h \
                 OgreCylinderEmitter.h \
                 OgreCylinderEmitterFactory.h \
                 OgreEllipsoidEmitter.h \
@@ -15,4 +17,6 @@ noinst_HEADERS =OgreAreaEmitter.h \
                 OgrePointEmitter.h \
                 OgrePointEmitterFactory.h \
                 OgreRingEmitter.h \
-                OgreRingEmitterFactory.h
+                OgreRingEmitterFactory.h \
+				OgreScaleAffector.h \
+				OgreScaleAffectorFactory.h 
