--- a/trunk/PlugIns/ParticleFX/src/Makefile.am
+++ b/trunk/PlugIns/ParticleFX/src/Makefile.am
@@ -5,13 +5,15 @@ pkglib_PROGRAMS = Plugin_ParticleFX.so
 Plugin_ParticleFX_so_SOURCES = OgreAreaEmitter.cpp \
                         OgreBoxEmitter.cpp \
                         OgreColourFaderAffector.cpp \
+                        OgreColourFaderAffector2.cpp \
                         OgreCylinderEmitter.cpp \
                         OgreEllipsoidEmitter.cpp \
                         OgreHollowEllipsoidEmitter.cpp \
                         OgreLinearForceAffector.cpp \
                         OgreParticleFX.cpp \
                         OgrePointEmitter.cpp \
-                        OgreRingEmitter.cpp
+                        OgreRingEmitter.cpp \
+						OgreScaleAffector.cpp 
 
 Plugin_ParticleFX_so_LDFLAGS = $(SHARED_FLAGS) -L$(top_srcdir)/OgreMain/src
 Plugin_ParticleFX_so_LDADD = -lOgreMain
