Added very simple BSP collision demo

--- a/ReferenceApplication/ReferenceAppLayer/scripts/ReferenceAppLayer.vcproj
+++ b/ReferenceApplication/ReferenceAppLayer/scripts/ReferenceAppLayer.vcproj
@@ -50,7 +50,7 @@
 				Name="VCMIDLTool"/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="copy $(OutDir)\$(TargetFileName) ..\..\Common\bin\$(ConfigurationName)"/>
+				CommandLine="copy $(OutDir)\$(TargetFileName) ..\..\..\Samples\Common\bin\$(ConfigurationName)"/>
 			<Tool
 				Name="VCPreBuildEventTool"/>
 			<Tool
@@ -157,6 +157,9 @@
 		<Filter
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl;inc">
+			<File
+				RelativePath="..\include\OgreCollideCamera.h">
+			</File>
 			<File
 				RelativePath="..\include\OgreRefAppApplicationObject.h">
 			</File>
