Added collidable camera (not quite perfect yet) Added the ability to turn off dynamics on an object for speed but have them reenabled automatically when interaction occurs Added option to automatically disable dynamics on objects which are at rest for a certain amount of time Added a crappy test Q3A level with no copyrighted material for use in BspCollision test

--- a/ReferenceApplication/BspCollision/scripts/BspCollision.vcproj
+++ b/ReferenceApplication/BspCollision/scripts/BspCollision.vcproj
@@ -20,7 +20,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				ImproveFloatingPointConsistency="TRUE"
-				AdditionalIncludeDirectories="..\include;..\..\..\Samples\Common\include;..\..\..\OgreMain\include;..\..\..\Dependencies\include;..\..\ReferenceAppLayer\include"
+				AdditionalIncludeDirectories="..\include;..\..\Common\include;..\..\..\OgreMain\include;..\..\..\Dependencies\include;..\..\ReferenceAppLayer\include"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS"
 				MinimalRebuild="TRUE"
 				BasicRuntimeChecks="3"
@@ -74,7 +74,7 @@
 				OmitFramePointers="TRUE"
 				OptimizeForProcessor="2"
 				OptimizeForWindowsApplication="TRUE"
-				AdditionalIncludeDirectories="..\include;..\..\..\Samples\Common\include;..\..\..\OgreMain\include;..\..\..\Dependencies\include;..\..\ReferenceAppLayer\include"
+				AdditionalIncludeDirectories="..\include;..\..\Common\include;..\..\..\OgreMain\include;..\..\..\Dependencies\include;..\..\ReferenceAppLayer\include"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS"
 				StringPooling="TRUE"
 				MinimalRebuild="TRUE"
@@ -127,7 +127,10 @@
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl;inc">
 			<File
-				RelativePath="..\..\..\Samples\Common\include\ExampleApplication.h">
+				RelativePath="..\..\Common\include\ExampleRefAppApplication.h">
+			</File>
+			<File
+				RelativePath="..\..\Common\include\ExampleRefAppFrameListener.h">
 			</File>
 		</Filter>
 		<Filter
