--- a/trunk/ReferenceApplication/BspCollision/src/Makefile.am
+++ b/trunk/ReferenceApplication/BspCollision/src/Makefile.am
@@ -1,4 +1,4 @@
-INCLUDES = $(STLPORT_CFLAGS) -I$(top_srcdir)/OgreMain/include -I$(top_srcdir)/Samples/Common/include -I$(top_srcdir)/ReferenceApplication/ReferenceAppLayer/include
+INCLUDES = $(STLPORT_CFLAGS) -I$(top_srcdir)/OgreMain/include -I$(top_srcdir)/ReferenceApplication/Common/include -I$(top_srcdir)/ReferenceApplication/ReferenceAppLayer/include
 
 noinst_PROGRAMS = BspCollsion
 
