Norondion's patch, adds a SharedPtr template class for reference counting and uses it for the ControllerValue, thus eliminating the final memory leak, huzzah!

--- a/OgreMain/include/Makefile.am
+++ b/OgreMain/include/Makefile.am
@@ -128,6 +128,7 @@ OgreSceneQuery.h \
 OgreScrollEvent.h \
 OgreScrollTarget.h \
 OgreSerializer.h \
+OgreSharedPtr.h \
 OgreSimpleRenderable.h \
 OgreSimpleSpline.h \
 OgreSingleton.h \
