--- a/trunk/Samples/Common/bin/resources.cfg
+++ b/trunk/Samples/Common/bin/resources.cfg
@@ -2,3 +2,4 @@ Zip=../../Media/dragon.zip
 Zip=../../Media/knot.zip
 Zip=../../Media/skybox.zip
 FileSystem=../../Media/
+Zip=../../Media/ogretestmap.zip
