BspCollision now builds & runs in Linux. For some reason Math::POS)INFINITY is not the same as ODE's dInfinity in Linux, whilst it is in Windows. Also build issues resolved and test map referenced in resources.cfg for portability.

--- a/ReferenceApplication/ReferenceAppLayer/include/Makefile.am
+++ b/ReferenceApplication/ReferenceAppLayer/include/Makefile.am
@@ -1,4 +1,5 @@
 noinst_HEADERS = OgreRefAppApplicationObject.h \
+	OgreRefAppBall.h \
 	OgreRefAppBox.h \
 	OgreRefAppOgreHead.h \
 	OgreRefAppJoint.h \
