--- a/ReferenceApplication/BspCollision/src/Makefile.am
+++ b/ReferenceApplication/BspCollision/src/Makefile.am
@@ -1,10 +1,10 @@
-INCLUDES = $(STLPORT_CFLAGS) -I$(top_srcdir)/OgreMain/include -I$(top_srcdir)/ReferenceApplication/Common/include -I$(top_srcdir)/ReferenceApplication/ReferenceAppLayer/include
+INCLUDES = $(STLPORT_CFLAGS) -I$(top_srcdir)/../OgreMain/include -I$(top_srcdir)/Common/include -I$(top_srcdir)/ReferenceAppLayer/include
 
-noinst_PROGRAMS = BspCollsion
+noinst_PROGRAMS = BspCollision
 
-BspCollsion_SOURCES = BspCollision.cpp
-BspCollsion_LDFLAGS = -L$(top_srcdir)/OgreMain/src
-BspCollsion_LDADD = -lOgreMain -lOgreReferenceAppLayer
+BspCollision_SOURCES = BspCollision.cpp
+BspCollision_LDFLAGS = -L$(top_srcdir)/../OgreMain/src -L$(top_srcdir)/ReferenceAppLayer/src
+BspCollision_LDADD = -lOgreMain -lOgreReferenceAppLayer
 
 install-exec-local:
-	$(INSTALL_PROGRAM) .libs/BspCollision $(top_builddir)/Samples/Common/bin/BspCollision
+	$(INSTALL_PROGRAM) .libs/BspCollision $(top_builddir)/../Samples/Common/bin/BspCollision
