--- a/ReferenceApplication/configure.in
+++ b/ReferenceApplication/configure.in
@@ -1,7 +1,7 @@
 AC_PREREQ(2.50)
 
 AC_INIT(OGRE_REFAPP, 0.10.0)
-AM_INIT_AUTOMAKE(OGRE_REFAPP, 0.10.0)
+AM_INIT_AUTOMAKE([1.6.1 foreign no-installinfo no-installman subdir-objects])
 AM_CONFIG_HEADER(ReferenceAppLayer/include/config.h)
 
 AC_CANONICAL_TARGET
@@ -26,8 +26,10 @@ if test x$GCC = xyes; then
 fi
 
 dnl Other stuff we need
-AC_CHECK_LIB(OgreMain)
-AC_CHECK_LIB(ode)
+PKG_CHECK_MODULES(OGRE, OGRE)
+AC_LANG_PUSH([C++])
+AC_CHECK_LIB([ode], [main], [], AC_MSG_ERROR([Can't find libode]))
+AC_LANG_POP([C++])
 AC_CHECK_LIB(m, pow)
 AC_CHECK_LIB(z, gzopen)
 AC_CHECK_FUNC(snprintf, AC_DEFINE(HAVE_SNPRINTF,,snprintf))
