--- a/Docs/Docs/Config/html.cfg
+++ b/Docs/Docs/Config/html.cfg
@@ -23,7 +23,7 @@ PROJECT_NAME           = OGRE
 # This could be handy for archiving the generated documentation or 
 # if some version control system is used.
 
-PROJECT_NUMBER         = 0.99f
+PROJECT_NUMBER         = 0.11.0
 
 # The OUTPUT_DIRECTORY tag is used to specify the (relative or absolute) 
 # base path where the generated documentation will be put. 
@@ -311,7 +311,8 @@ WARN_LOGFILE           =
 INPUT                  = ../../../OgreMain \
                          ../../../PlatformManagers \
                          ../../../PlugIns \
-                         ../../../RenderSystems
+                         ../../../RenderSystems \
+						 ../../../ReferenceApplication/ReferenceAppLayer
 
 # If the value of the INPUT tag contains directories, you can use the 
 # FILE_PATTERNS tag to specify one or more wildcard pattern (like *.cpp 
