--- a/trunk/Samples/Makefile.am
+++ b/trunk/Samples/Makefile.am
@@ -1,1 +1,3 @@
-SUBDIRS = SkeletalAnimation BezierPatch EnvMapping Transpacency Lighting ParticleFX TextureFX SkyDome BSP Common SkyPlane SkyBox CameraTrack Terrain Gui Nature RenderToTexture
+SUBDIRS = SkeletalAnimation BezierPatch EnvMapping Transpacency Lighting \
+ParticleFX TextureFX SkyDome BSP Common SkyPlane SkyBox CameraTrack Terrain \
+Gui Nature RenderToTexture Water
