--- a/trunk/Tools/MayaExport/MayaExport.vcproj
+++ b/trunk/Tools/MayaExport/MayaExport.vcproj
@@ -4,7 +4,9 @@
 	Version="7.00"
 	Name="MayaExport"
 	SccProjectName="MayaExport"
-	SccLocalPath="..">
+	SccAuxPath=""
+	SccLocalPath=".."
+	SccProvider="MSSCCI:Microsoft Visual SourceSafe">
 	<Platforms>
 		<Platform
 			Name="Win32"/>
@@ -22,6 +24,7 @@
 				Name="VCCLCompilerTool"
 				InlineFunctionExpansion="1"
 				OptimizeForProcessor="1"
+				AdditionalIncludeDirectories="..\..\OgreMain\include;..\..\Dependencies\include"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;OGREEXPORT_EXPORTS"
 				StringPooling="TRUE"
 				RuntimeLibrary="2"
@@ -37,11 +40,12 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalOptions="/MACHINE:I386"
-				AdditionalDependencies="Foundation.lib OpenMaya.lib OpenMayaAnim.lib OpenMayaUI.lib odbc32.lib odbccp32.lib"
-				OutputFile=".\Release/MayaExport.dll"
+				AdditionalOptions="/MACHINE:I386 /export:initializePlugin /export:uninitializePlugin"
+				AdditionalDependencies="Foundation.lib OpenMaya.lib OpenMayaAnim.lib OpenMayaUI.lib odbc32.lib odbccp32.lib OgreMain.lib zlib.lib"
+				OutputFile=".\Release/OgreMayaExport.mll"
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
+				AdditionalLibraryDirectories="..\..\OgreMain\lib\Release;..\..\Dependencies\lib\Release"
 				ProgramDatabaseFile=".\Release/MayaExport.pdb"
 				ImportLibrary=".\Release/MayaExport.lib"/>
 			<Tool
@@ -78,6 +82,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				OptimizeForProcessor="1"
+				AdditionalIncludeDirectories="..\..\OgreMain\include;..\..\Dependencies\include"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;OGREEXPORT_EXPORTS"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -92,11 +97,12 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalOptions="/MACHINE:I386"
-				AdditionalDependencies="Foundation.lib OpenMaya.lib OpenMayaAnim.lib OpenMayaUI.lib odbc32.lib odbccp32.lib"
-				OutputFile="Debug/MayaExport.mll"
+				AdditionalOptions="/MACHINE:I386 /export:initializePlugin /export:uninitializePlugin"
+				AdditionalDependencies="Foundation.lib OpenMaya.lib OpenMayaAnim.lib OpenMayaUI.lib odbc32.lib odbccp32.lib OgreMain.lib zlib.lib"
+				OutputFile="Debug/OgreMayaExport.mll"
 				LinkIncremental="2"
 				SuppressStartupBanner="TRUE"
+				AdditionalLibraryDirectories="..\..\OgreMain\lib\Debug;..\..\Dependencies\lib\Debug"
 				GenerateDebugInformation="TRUE"
 				ProgramDatabaseFile=".\Debug/MayaExport.pdb"
 				ImportLibrary=".\Debug/MayaExport.lib"/>
@@ -128,13 +134,13 @@
 			Name="Source Files"
 			Filter="cpp;c;cxx;rc;def;r;odl;idl;hpj;bat;h;hpp;hxx;hm;inl">
 			<File
-				RelativePath=".\MayaExporter.cpp">
+				RelativePath="OgreExporter.cpp">
 			</File>
 			<File
-				RelativePath=".\MayaExporter.h">
+				RelativePath="OgreExporter.h">
 			</File>
 			<File
-				RelativePath=".\MayaExporterDll.cpp">
+				RelativePath="OgreExporterDll.cpp">
 			</File>
 		</Filter>
 		<Filter
