--- a/trunk/Samples/Common/bin/resources.cfg
+++ b/trunk/Samples/Common/bin/resources.cfg
@@ -1,5 +1,6 @@
 Zip=../../Media/dragon.zip
 Zip=../../Media/knot.zip
 Zip=../../Media/skybox.zip
+Zip=../../Media/cubemap.zip
 FileSystem=../../Media/
 Zip=../../Media/ogretestmap.zip
