--- a/trunk/RenderSystems/Direct3D9/scripts/RenderSystem_Direct3D9.vcproj
+++ b/trunk/RenderSystems/Direct3D9/scripts/RenderSystem_Direct3D9.vcproj
@@ -104,7 +104,7 @@
 				SuppressStartupBanner="TRUE"
 				AdditionalLibraryDirectories="&quot;..\..\..\OgreMain\lib\$(ConfigurationName)&quot;;&quot;..\..\..\Dependencies\lib\$(ConfigurationName)&quot;"
 				ModuleDefinitionFile="..\misc\OgreD3D9RenderSystem.def"
-				GenerateDebugInformation="FALSE"
+				GenerateDebugInformation="TRUE"
 				SubSystem="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
@@ -141,6 +141,12 @@
 				RelativePath="..\src\OgreD3D9EngineDll.cpp">
 			</File>
 			<File
+				RelativePath="..\src\OgreD3D9HWBuffers.cpp">
+			</File>
+			<File
+				RelativePath="..\src\OgreD3D9Mappings.cpp">
+			</File>
+			<File
 				RelativePath="..\src\OgreD3D9RenderSystem.cpp">
 			</File>
 			<File
@@ -167,6 +173,12 @@
 			</File>
 			<File
 				RelativePath="..\include\OgreD3D9DriverList.h">
+			</File>
+			<File
+				RelativePath="..\include\OgreD3D9HWBuffers.h">
+			</File>
+			<File
+				RelativePath="..\include\OgreD3D9Mappings.h">
 			</File>
 			<File
 				RelativePath="..\include\OgreD3D9Prerequisites.h">
