GTK Support system, and releated changes to GLSupport

--- a/RenderSystems/GL/src/Makefile.am
+++ b/RenderSystems/GL/src/Makefile.am
@@ -1,4 +1,7 @@
-INCLUDES = $(STLPORT_CFLAGS) -I$(top_srcdir)/RenderSystems/GL/include -I$(top_srcdir)/OgreMain/include $(SDL_CFLAGS)
+INCLUDES = $(STLPORT_CFLAGS) -I$(top_srcdir)/RenderSystems/GL/include \
+           -I$(top_srcdir)/OgreMain/include $(GLSUPPORT_CFLAGS) \
+           -I$(top_srcdir)/PlatformManagers/$(OGRE_PLATFORM)/include \
+           -I$(top_srcdir)/RenderSystems/GL/src/$(OGRE_GLSUPPORT)
 
 pkglib_PROGRAMS = RenderSystem_GL.so
 
@@ -7,8 +10,7 @@ RenderSystem_GL_so_SOURCES = OgreGLEngineDll.cpp \
 						   OgreGLSupport.cpp \
                            OgreGLTexture.cpp \
                            OgreGLTextureManager.cpp \
-                           OgreSDLGLSupport.cpp \
-                           OgreSDLWindow.cpp
+                           OgreGTKGLSupport.cpp
 
 RenderSystem_GL_so_LDFLAGS = $(SHARED_FLAGS) -L$(top_srcdir)/OgreMain/src
-RenderSystem_GL_so_LDADD = $(SDL_LIBS) $(GL_LIBS) -lOgreMain
+RenderSystem_GL_so_LDADD = $(GLSUPPORT_LIBS) $(GL_LIBS) -lOgreMain
