GuiElements plugin now installs it's headers into include/OGRE

--- a/PlugIns/GuiElements/include/Makefile.am
+++ b/PlugIns/GuiElements/include/Makefile.am
@@ -1,4 +1,4 @@
-noinst_HEADERS = OgreBorderPanelGuiElement.h \
+pkginclude_HEADERS = OgreBorderPanelGuiElement.h \
 		 OgreBorderButtonGuiElement.h \
 		 OgreButtonGuiElement.h \
 		 OgreCursorGuiElement.h \
