--- a/Samples/Common/bin/resources.cfg
+++ b/Samples/Common/bin/resources.cfg
@@ -4,3 +4,4 @@ Zip=../../Media/skybox.zip
 Zip=../../Media/cubemap.zip
 FileSystem=../../Media/
 Zip=../../Media/ogretestmap.zip
+Zip=../../Media/dot3bump.zip
