* Added code to set the capabilities in RenderSystemCapabilities. * Removed GLSupport::has* methods as they are no longer needed. * GLSupport is no longer a singleton as its not needed anymore * Added GLTexture::getGLTextureFormat() method which returns the correct GL texture format based on OGRE's internal pixel formats. * Fixed greyscale image loading (doesn't segfault anymore)

--- a/OgreMain/src/Makefile.am
+++ b/OgreMain/src/Makefile.am
@@ -84,6 +84,7 @@ libOgreMain_la_SOURCES = OgreActionEvent.cpp \
                          OgreQuaternion.cpp \
                          OgreRenderQueue.cpp \
                          OgreRenderSystem.cpp \
+                         OgreRenderSystemCapabilities.cpp \
                          OgreRenderTarget.cpp \
                          OgreRenderTexture.cpp \
                          OgreRenderWindow.cpp \
