top_builddir vs top_srcdir

--- a/RenderSystems/GL/src/gtk/Makefile.am
+++ b/RenderSystems/GL/src/gtk/Makefile.am
@@ -1,7 +1,7 @@
-INCLUDES = $(STLPORT_CFLAGS) -I$(top_srcdir)/RenderSystems/GL/include \
-           -I$(top_srcdir)/OgreMain/include $(GLSUPPORT_CFLAGS) \
-           -I$(top_srcdir)/PlatformManagers/$(OGRE_PLATFORM)/include \
-           -I$(top_srcdir)/RenderSystems/GL/src/$(OGRE_GLSUPPORT)
+INCLUDES = $(STLPORT_CFLAGS) -I$(top_builddir)/RenderSystems/GL/include \
+           -I$(top_builddir)/OgreMain/include $(GLSUPPORT_CFLAGS) \
+           -I$(top_builddir)/PlatformManagers/$(OGRE_PLATFORM)/include \
+           -I$(top_builddir)/RenderSystems/GL/src/$(OGRE_GLSUPPORT)
 
 noinst_LIBRARIES = libsupport.a
 
