--- a/RenderSystems/GL/src/Makefile.am
+++ b/RenderSystems/GL/src/Makefile.am
@@ -1,7 +1,7 @@
-INCLUDES = $(STLPORT_CFLAGS) -I$(top_srcdir)/RenderSystems/GL/include \
-           -I$(top_srcdir)/OgreMain/include $(GLSUPPORT_CFLAGS) \
-           -I$(top_srcdir)/PlatformManagers/$(OGRE_PLATFORM)/include \
-           -I$(top_srcdir)/RenderSystems/GL/src/$(OGRE_GLSUPPORT)
+INCLUDES = $(STLPORT_CFLAGS) -I$(top_builddir)/RenderSystems/GL/include \
+           -I$(top_builddir)/OgreMain/include $(GLSUPPORT_CFLAGS) \
+           -I$(top_builddir)/PlatformManagers/$(OGRE_PLATFORM)/include \
+           -I$(top_builddir)/RenderSystems/GL/src/$(OGRE_GLSUPPORT)
 
 DIST_SUBDIRS = gtk SDL win32
 SUBDIRS = $(OGRE_GLSUPPORT)
@@ -14,6 +14,6 @@ RenderSystem_GL_so_SOURCES = OgreGLEngineDll.cpp \
                            OgreGLTexture.cpp \
                            OgreGLTextureManager.cpp
 
-RenderSystem_GL_so_LDFLAGS = $(SHARED_FLAGS) -L$(top_srcdir)/OgreMain/src
+RenderSystem_GL_so_LDFLAGS = $(SHARED_FLAGS) -L$(top_builddir)/OgreMain/src
 RenderSystem_GL_so_LDADD = $(GL_LIBS) $(GLSUPPORT_LIBS) -lOgreMain \
-    $(top_srcdir)/RenderSystems/GL/src/$(OGRE_GLSUPPORT)/libsupport.a
+    $(top_builddir)/RenderSystems/GL/src/$(OGRE_GLSUPPORT)/libsupport.a
