--- a/RenderSystems/GL/src/SDL/Makefile.am
+++ b/RenderSystems/GL/src/SDL/Makefile.am
@@ -1,8 +1,6 @@
-INCLUDES = $(STLPORT_CFLAGS) -I$(top_srcdir)/RenderSystems/GL/include \
-           -I$(top_srcdir)/OgreMain/include $(GLSUPPORT_CFLAGS) \
-           -I$(top_srcdir)/PlatformManagers/$(OGRE_PLATFORM)/include \
-           -I$(top_srcdir)/RenderSystems/GL/src/$(OGRE_GLSUPPORT)
-
+INCLUDES = $(STLPORT_CFLAGS) -I$(top_builddir)/RenderSystems/GL/include \
+           -I$(top_builddir)/OgreMain/include $(GLSUPPORT_CFLAGS) \
+           -I$(top_builddir)/PlatformManagers/$(OGRE_PLATFORM)/include \
 noinst_LIBRARIES = libsupport.a
 
 libsupport_a_SOURCES = OgreSDLGLSupport.cpp OgreSDLWindow.cpp
