1. Significant rationalisation pass over the VBO interface; this time the changes are:  - vertex buffer have no knowledge of the semantics of their contents  - vertex declarations / elements have been introduced to define the source of vertices,   drawing from bound hardware buffers, types (data formats eg float3) and semantics (e.g. position) - vertex buffer bindings are now explicit; this allows both for resuse of bindings and easier mapping to underlying APIs
2. First pass implementation of the D3D vertex buffers & declarations.
3. RenderOperation modified to be in line with the VBO concepts
4. Added parallel _render operation for new RenderOperation and abstract methods for setting declarations, buffer bindings

--- a/OgreMain/include/Makefile.am
+++ b/OgreMain/include/Makefile.am
@@ -49,6 +49,7 @@ OgreGuiElementFactory.h \
 OgreGuiManager.h \
 OgreGuiPressable.h \
 OgreHardwareBuffer.h \
+OgreHardwareBufferManager.h \
 OgreHardwareIndexBuffer.h \
 OgreHardwareVertexBuffer.h \
 OgreImage.h \
