Updated core gl headers to 1.4 for Windows, and customised glprocs.h/.c to include all the VBO functions.

--- a/RenderSystems/GL/scripts/RenderSystem_GL.vcproj
+++ b/RenderSystems/GL/scripts/RenderSystem_GL.vcproj
@@ -136,6 +136,15 @@
 				RelativePath="..\src\OgreGLEngineDll.cpp">
 			</File>
 			<File
+				RelativePath="..\src\OgreGLHardwareBufferManager.cpp">
+			</File>
+			<File
+				RelativePath="..\src\OgreGLHardwareIndexBuffer.cpp">
+			</File>
+			<File
+				RelativePath="..\src\OgreGLHardwareVertexBuffer.cpp">
+			</File>
+			<File
 				RelativePath="..\src\OgreGLRenderSystem.cpp">
 			</File>
 			<File
@@ -146,6 +155,9 @@
 			</File>
 			<File
 				RelativePath="..\src\OgreGLTextureManager.cpp">
+			</File>
+			<File
+				RelativePath="..\src\OgreGLVertexDeclaration.cpp">
 			</File>
 			<File
 				RelativePath="..\src\OgreWin32GLSupport.cpp">
@@ -161,6 +173,15 @@
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl;inc">
 			<File
+				RelativePath="..\include\OgreGLHardwareBufferManager.h">
+			</File>
+			<File
+				RelativePath="..\include\OgreGLHardwareIndexBuffer.h">
+			</File>
+			<File
+				RelativePath="..\include\OgreGLHardwareVertexBuffer.h">
+			</File>
+			<File
 				RelativePath="..\include\OgreGLPrerequisites.h">
 			</File>
 			<File
@@ -174,6 +195,9 @@
 			</File>
 			<File
 				RelativePath="..\include\OgreGLTextureManager.h">
+			</File>
+			<File
+				RelativePath="..\include\OgreGLVertexDeclaration.h">
 			</File>
 			<File
 				RelativePath="..\include\OgreSDLGLSupport.h">
@@ -192,6 +216,15 @@
 			</File>
 			<File
 				RelativePath="..\include\OgreWin32Window.h">
+			</File>
+			<File
+				RelativePath="..\include\glext.h">
+			</File>
+			<File
+				RelativePath="..\include\glprocs.h">
+			</File>
+			<File
+				RelativePath="..\include\glxext.h">
 			</File>
 			<File
 				RelativePath="..\include\wglext.h">
