Added clone methods to VertexData and IndexData, and copyData method to HardwareBuffer Reworked Mesh / SubMesh again because dropping the shared vertex data in fabour of the implicit sharing through vertex buffer bindings was a management headache

--- a/OgreMain/include/Makefile.am
+++ b/OgreMain/include/Makefile.am
@@ -157,6 +157,7 @@ OgreTimer.h \
 OgreUserDefinedObject.h \
 OgreVector3.h \
 OgreVertexBoneAssignment.h \
+OgreVertexIndexData.h \
 OgreViewport.h \
 OgreWireBoundingBox.h \
 OgreZip.h \
