Added emulated hardware vertex / index buffers & manager, to be used by MeshSerializer (exporters) at least since rendersystem will not have been initialised, possibly also for GL when VBO extension is not available and maybe D3D7.

--- a/OgreMain/include/Makefile.am
+++ b/OgreMain/include/Makefile.am
@@ -25,6 +25,7 @@ OgreController.h \
 OgreControllerManager.h \
 OgreCursor.h \
 OgreDataChunk.h \
+OgreDefaultHardwareBufferManager.h \
 OgreDynLib.h \
 OgreDynLibManager.h \
 OgreEntity.h \
