Work-in-progress revamping of MeshSerializer to handle new VBO options; mesh loading & saving is now implemented by MeshSerializerImpl to allow multiple versions of the file format to be supported at once. Also changed some signatures in DataChunk to size_t to remove warnings.

--- a/OgreMain/include/Makefile.am
+++ b/OgreMain/include/Makefile.am
@@ -79,6 +79,7 @@ OgreMesh.h \
 OgreMeshFileFormat.h \
 OgreMeshManager.h \
 OgreMeshSerializer.h \
+OgreMeshSerializerImpl.h \
 OgreMouseEvent.h \
 OgreMouseMotionTarget.h \
 OgreMouseTarget.h \
