Disabled building of GL hardware buffers until the unstable branch gets merged into head

--- a/RenderSystems/GL/src/Makefile.am
+++ b/RenderSystems/GL/src/Makefile.am
@@ -9,14 +9,10 @@ SUBDIRS = $(OGRE_GLSUPPORT)
 pkglib_PROGRAMS = RenderSystem_GL.so
 
 RenderSystem_GL_so_SOURCES = OgreGLEngineDll.cpp \
-                             OgreGLHardwareBufferManager.cpp \
-                             OgreGLHardwareIndexBuffer.cpp \
-                             OgreGLHardwareVertexBuffer.cpp \
                              OgreGLRenderSystem.cpp \
                              OgreGLSupport.cpp \
                              OgreGLTexture.cpp \
-                             OgreGLTextureManager.cpp \
-                             OgreGLVertexDeclaration.cpp
+                             OgreGLTextureManager.cpp 
 
 RenderSystem_GL_so_LDFLAGS = $(SHARED_FLAGS) -L$(top_builddir)/OgreMain/src
 RenderSystem_GL_so_LDADD = $(GL_LIBS) $(GLSUPPORT_LIBS) -lOgreMain \
